# GoogleGenomics

./: .Rbuildignore  .gitignore  .travis.yml  CONTRIBUTING.rst  DESCRIPTION  GRPC.rst  GoogleGenomics.Rproj  NAMESPACE  NEWS  README.md  README.rst  cleanup  configure  configure.ac  configure.win  genomics-api.R
R/: GoogleGenomics.R  authenticate.R  client.R  grpc.R  plots.R  reads.R  service.R  variants.R  zzz.R
inst/doc/: PlottingAlignments.Rmd  PlottingAlignments.md  VariantAnnotation-comparison-test.R  VariantAnnotation-comparison-test.Rmd  VariantAnnotation-comparison-test.md
man/: GoogleGenomics.Rd  authenticate.Rd  callGRPCMethod.Rd  defaultGcloudCredsPath.Rd  getAnyPage.Rd  getRProtoBufDefaultObject.Rd  getReadData.Rd  getReads.Rd  getReadsPage.Rd  getSearchPage.Rd  getVariantCalls.Rd  getVariantData.Rd  getVariants.Rd  getVariantsPage.Rd  isGRPCAvailable.Rd  plotAlignments.Rd  readStore.Rd  readsToGAlignments.Rd  roxygen2.Rd  variantStore.Rd  variantsToGRanges.Rd  variantsToVCF.Rd  variantsToVRanges.Rd
shiny/: DESCRIPTION  README.md  server.R  ui.R
src/: Makevars.in  Makevars.win  README.rst  client-annotations.cc  client-common.cc  client-common.h  client-datasets.cc  client-reads.cc  client-references.cc  client-variants.cc  config.h.in  init.cc  rprotobuf.cc  rprotobuf.h
src/google/api/: annotations.pb.cc  annotations.pb.h  http.pb.cc  http.pb.h
src/google/genomics/v1/: annotations.grpc.pb.cc  annotations.grpc.pb.h  annotations.pb.cc  annotations.pb.h  cigar.pb.cc  cigar.pb.h  datasets.grpc.pb.cc  datasets.grpc.pb.h  datasets.pb.cc  datasets.pb.h  operations.pb.cc  operations.pb.h  position.pb.cc  position.pb.h  range.pb.cc  range.pb.h  readalignment.pb.cc  readalignment.pb.h  readgroup.pb.cc  readgroup.pb.h  readgroupset.pb.cc  readgroupset.pb.h  reads.grpc.pb.cc  reads.grpc.pb.h  reads.pb.cc  reads.pb.h  references.grpc.pb.cc  references.grpc.pb.h  references.pb.cc  references.pb.h  variants.grpc.pb.cc  variants.grpc.pb.h  variants.pb.cc  variants.pb.h
src/google/iam/v1/: iam_policy.pb.cc  iam_policy.pb.h  policy.pb.cc  policy.pb.h
src/google/longrunning/: operations.pb.cc  operations.pb.h
src/google/rpc/: code.pb.cc  code.pb.h  status.pb.cc  status.pb.h
tests/: runTests.R  testVariants.R
tests/testthat/: test-getReads.R  test-getVariantCalls.R  test-getVariants.R
vignettes/: AnnotatingVariants.Rmd  PlottingAlignments.Rmd  VariantAnnotation-comparison-test.Rmd
